# askcos2_core

configs/: loader.py
deploy/: README.md  inventory.example.py  pyproject.toml
deploy/group_vars/: api.yaml
deploy/inventory/: inventory.example.yaml
deploy/roles/nginx/tasks/: main.yml
deploy/roles/nginx/templates/: nginx.conf.j2
deploy/src/: certbot.py  docker.py  facts.py  nginx.py
docs/: architecture.md
